MDEV-16697: Fix difference between 32bit/windows and 64bit systems in allowed select nest level